<resources>
    <string name="app_name">Lottery</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="user_login">用户登录</string>
    <string name="user_name_or_phone_number">用户名/手机号</string>
    <string name="confirm_login">确认登录</string>
    <string name="register_now">马上注册</string>
    <string name="remember_account">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="try_play">试玩</string>
    <string name="try_play_for_free">免费试玩</string>
    <string name="input_login_password">请输入登录密码</string>
    <string name="verify_code">验证码</string>
    <string name="input_correct_user_name">用户名应该由6&#8211;15位大小写字符和数字组成</string>
    <string name="input_correct_password">密码应该由6&#8211;15位大小写字符和数字组成</string>
    <string name="input_correct_verify_code">请输入正确的验证码</string>
    <string name="letter_and_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <!--注册-->
    <string name="user_register">用户注册</string>
    <string name="register_hint_user_name">用户账户(6–15个英文/数字组成)</string>
    <string name="register_hint_password">用户密码(6–15个英文/数字组成)</string>
    <string name="register_hint_ensure_password">确认密码(重复输入的登录密码)</string>
    <string name="register_hint_real_name">您的姓名(与提款的银行户名一致)</string>
    <string name="register_hint_pay_password">支付密码</string>

    <!--首页-->
    <string name="home_page">首页</string>
    <string name="lottery">开奖</string>
    <string name="funding">资金</string>
    <string name="funding_manage">资金管理</string>
    <string name="mine">我的</string>
    <string name="click_again_to_exit">再按一次退出应用</string>
    <string name="promotions">优惠活动</string>
    <string name="account_balance">彩票余额</string>
    <string name="i_want_recharge">我要充值</string>
    <string name="i_want_withdraw">我要提现</string>
    <string name="bet_record">下注记录</string>
    <string name="lottery_hall">开奖大厅</string>
    <string name="lottery_record">开奖记录</string>
    <string name="game_rules">游戏规则</string>
    <string name="contact_us">联系我们</string>
    <string name="log_out">退出</string>
    <string name="reset">重置</string>
    <string name="input_manual_amount">请输入下注金额</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="balance">余额：</string>
    <string name="prize_time">开奖时间</string>
    <string name="bet_limit" formatted="false">最少选择%d项，最多选择%d项</string>
    <string name="bet_just">请选择%d项下注</string>
    <string name="select_betting_item">请选择投注项</string>
    <string name="default_time_hms">00:00:00</string>
    <string name="default_time_ms">00:00</string>
    <string name="no_data_and_click_to_retry">暂无数据，点击重试</string>
    <string name="personal_center">个人中心</string>
    <string name="visitor">游客</string>
    <string name="sign_up">注册</string>
    <string name="deposit">存入：</string>
    <string name="take_out">取出：</string>
    <string name="untreated">未处理</string>
    <string name="fail">失败</string>
    <string name="success">成功</string>
    <string name="user_balance">账户余额：</string>
    <string name="last_round">上期</string>
    <string name="lottery_close">封盘</string>
    <string name="lottery_round">%s期</string>
    <string name="time">时间：%s</string>
    <string name="lottery_closed">封</string>
    <string name="default_text">--</string>
    <string name="colon">:</string>
    <string name="input_bet_money">请输入投注金额</string>
    <string name="bet_detail">下注明细</string>
    <string name="login_now">马上登录</string>
    <string name="has_an_account">已有账号？</string>
    <string name="no_data">暂无数据</string>
    <string name="add_bankcard">添加银行卡</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="amount_hint">最低金额￥100</string>
    <string name="withdraw_pwd">提现密码</string>
    <string name="withdraw_pwd_hint">请输入4位提现密码</string>
    <string name="confirm_withdraw">确认提现</string>
    <string name="bank_name">银行名称：</string>
    <string name="input_odd_card_num">请输入已绑定银行卡的完整卡号</string>
    <string name="bind_card_tip1">请验证已经绑定的银行卡账号</string>
    <string name="bind_card_tip2">请输入您的银行卡资料</string>
    <string name="bind_card_tip3">请输入新的银行卡资料</string>
    <string name="bind_card_tip4">身份验证不通过，请输入正确的卡号！</string>
    <string name="select_bank">选择银行：</string>
    <string name="choice_bank_you_deposit">选择您转账所使用的银行</string>
    <string name="bank_num">银行卡号：</string>
    <string name="input_card_num">请输入16–19位的银行卡号</string>
    <string name="input_card_num_again">请再次输入银行卡号</string>
    <string name="account_address">开户地址：</string>
    <string name="input_address">请输入开户行地址</string>
    <string name="commit">提交</string>
    <string name="bank">银&#12288;&#12288;行：</string>
    <string name="choice_bank_hint">请选择您要转入的银行</string>
    <string name="input_recharge_amount">请输入充值金额</string>
    <string name="channel_choice_hint">若充值失败，请更换其他通道重试</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="payee_info">收款信息</string>
    <string name="open_bank">开户银行：</string>
    <string name="bank_address">银行地址：</string>
    <string name="payee_name">收&#8194;款&#8194;人：</string>
    <string name="user_account_name">用户姓名：</string>
    <string name="input_real_name">请输入您的真实中文姓名</string>
    <string name="deposit_amount">存款金额：</string>
    <string name="deposit_date">汇款日期：</string>
    <string name="time_with_colon">时间：</string>
    <string name="order_num">交易单号：</string>
    <string name="input_order_num">请输入交易单号的后4位</string>
    <string name="personal_info">个人资料</string>
    <string name="my_account">我的账号：</string>
    <string name="real_name">真实姓名：</string>
    <string name="email">邮&#12288;&#12288;箱：</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>

    <string name="modify_login_password">修改登录密码</string>
    <string name="modify_pay_password">修改支付密码</string>
    <string name="input_odd_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="input_odd_password2">请输入旧密码(四位纯数字)</string>
    <string name="input_new_password2">请输入新密码(四位纯数字)</string>
    <string name="input_new_password_again2">请再次输入新密码(四位纯数字)</string>
    <string name="ensure_modify">确认修改</string>
    <string name="record_detail">交易记录详情</string>
    <string name="record_no">交易单号:</string>
    <string name="record_time">交易时间:</string>
    <string name="record_style">交易方式:</string>
    <string name="record_status">交易状态:</string>
    <string name="record_amount">交易金额:</string>

</resources>
