<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.daking.lottery.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/colorPrimary"
        app:title_leftTextDrawable="@drawable/ic_arrow_back_white"
        app:title_titleMainText="@string/user_register"
        app:title_titleMainTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/large_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/img_logo"/>

            <EditText
                android:id="@+id/etUsername"
                style="@style/style_login_edit_text"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:digits="@string/letter_and_number"
                android:drawableStart="@drawable/ic_circled_user"
                android:hint="@string/register_hint_user_name"
                android:maxLength="15"
                android:maxLines="1"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/item_margin_top">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/style_login_edit_text"
                    android:digits="@string/letter_and_number"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/register_hint_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"/>

                <ImageView
                    android:id="@+id/ivPwdVisibility"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center|end"
                    android:scaleType="centerInside"
                    android:src="@drawable/selector_password_visibility"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/item_margin_top">

                <EditText
                    android:id="@+id/etEnsurePassword"
                    style="@style/style_login_edit_text"
                    android:digits="@string/letter_and_number"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/register_hint_ensure_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"/>

                <ImageView
                    android:id="@+id/ivEnsurePwdVisibility"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center|end"
                    android:scaleType="centerInside"
                    android:src="@drawable/selector_password_visibility"/>
            </FrameLayout>

            <EditText
                android:id="@+id/etRealName"
                style="@style/style_login_edit_text"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/item_margin_top"
                android:drawableStart="@drawable/ic_user_realname"
                android:hint="@string/register_hint_real_name"
                android:maxLength="15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_bottom_line_gray"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_money_lock"/>

                <com.daking.lottery.widget.PasswordView
                    android:id="@+id/passwordView"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:cursorColor="@color/colorPrimary"
                    app:filledItemBackground="@drawable/shape_password_border_select"
                    app:pTextColor="@color/colorPrimary"
                    app:pTextSize="18sp"
                    app:passwordLength="4"
                    app:passwordSpace="5dp"
                    app:unfilledItemBackground="@drawable/shape_password_border"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_text_pay_password"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/large_margin"
                android:background="@drawable/selector_primary_dark_corners_5dp"
                android:text="@string/register_now"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/has_an_account"
                    android:textColor="#666666"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tvToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_now"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>