<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvReset"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_solid_light_gray_corners_5dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/reset"
        android:textColor="@color/text_normal"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/shape_edit_text_bg"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_select_num"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selector_wallet_bg"
            android:gravity="center|bottom"
            android:paddingBottom="1dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/et_bet_amount"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/input_manual_amount"
            android:maxLength="6"
            android:numeric="integer"
            android:paddingEnd="35dp"
            android:paddingStart="0dp"
            android:textColor="@color/text_normal"
            android:textColorHint="@color/text_hint"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_bet"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:background="@drawable/selector_bet_btn_primary"
        android:enabled="false"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>